--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,170 +1,15 @@
-/* vietnamese */
-@font-face {
-  font-family: 'MuseoModerno';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/museomoderno/v2/zrf30HnU0_7wWdMrFcWqSEXPVyEaWJ55pTleMlZEieQQjNKl.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'MuseoModerno';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/museomoderno/v2/zrf30HnU0_7wWdMrFcWqSEXPVyEaWJ55pTleMlZEieUQjNKl.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'MuseoModerno';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/museomoderno/v2/zrf30HnU0_7wWdMrFcWqSEXPVyEaWJ55pTleMlZEiesQjA.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* vietnamese */
-@font-face {
-  font-family: 'MuseoModerno';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/museomoderno/v2/zrf30HnU0_7wWdMrFcWqSEXPVyEaWJ55pTleMrFDieQQjNKl.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'MuseoModerno';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/museomoderno/v2/zrf30HnU0_7wWdMrFcWqSEXPVyEaWJ55pTleMrFDieUQjNKl.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'MuseoModerno';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/museomoderno/v2/zrf30HnU0_7wWdMrFcWqSEXPVyEaWJ55pTleMrFDiesQjA.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* cyrillic */
-@font-face {
-  font-family: 'Jost';
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zJtBhPNqw73oHH7BbQp4-B6XlrZu0FBI4knsHL.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Jost';
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zJtBhPNqw73oHH7BbQp4-B6XlrZu0FBIQknsHL.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Jost';
-  font-style: italic;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zJtBhPNqw73oHH7BbQp4-B6XlrZu0FBIokng.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* cyrillic */
-@font-face {
-  font-family: 'Jost';
-  font-style: italic;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zJtBhPNqw73oHH7BbQp4-B6XlrZt8FBI4knsHL.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Jost';
-  font-style: italic;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zJtBhPNqw73oHH7BbQp4-B6XlrZt8FBIQknsHL.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Jost';
-  font-style: italic;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zJtBhPNqw73oHH7BbQp4-B6XlrZt8FBIokng.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* cyrillic */
-@font-face {
-  font-family: 'Jost';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zPtBhPNqw79Ij1E865zBUv7myjJTVFNIg8mg.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Jost';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zPtBhPNqw79Ij1E865zBUv7myjJTVPNIg8mg.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Jost';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zPtBhPNqw79Ij1E865zBUv7myjJTVBNIg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* cyrillic */
-@font-face {
-  font-family: 'Jost';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zPtBhPNqw79Ij1E865zBUv7myRJTVFNIg8mg.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Jost';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zPtBhPNqw79Ij1E865zBUv7myRJTVPNIg8mg.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Jost';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jost/v3/92zPtBhPNqw79Ij1E865zBUv7myRJTVBNIg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import url(https://fonts.googleapis.com/css?family=MuseoModerno:100,200,300,400,500,600,700,800,900&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap);
+
+
+
+
+
 body {
   font-family: Jost;
 }
 .display-1 {
-  font-family: 'MuseoModerno', cursive;
+  font-family: 'MuseoModerno', display;
   font-size: 4.5rem;
   line-height: 1.1;
 }
@@ -172,7 +17,7 @@ body {
   font-size: 7.2rem;
 }
 .display-2 {
-  font-family: 'MuseoModerno', cursive;
+  font-family: 'MuseoModerno', display;
   font-size: 3rem;
   line-height: 1.1;
 }
@@ -188,7 +33,7 @@ body {
   font-size: 1.6rem;
 }
 .display-5 {
-  font-family: 'MuseoModerno', cursive;
+  font-family: 'MuseoModerno', display;
   font-size: 1.6rem;
   line-height: 1.5;
 }
@@ -1066,75 +911,85 @@ a {
 .cid-s8AIcsDdZ9 .mbr-section-subtitle {
   text-align: center;
 }
-.cid-s8AHBhrlg0 {
-  padding-top: 270px;
-  padding-bottom: 270px;
-  background-image: url("../../../assets/images/background1.jpg");
+.cid-s8B3a71BB3 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/background3.jpg");
 }
-.cid-s8AHBhrlg0 .icon1 {
-  background: #ff8a8a;
+.cid-s8B3a71BB3 .mbr-overlay {
+  background: linear-gradient(135deg, #6f3f7c, #5849aa);
 }
-.cid-s8AHBhrlg0 .mbr-overlay {
-  z-index: 0;
+.cid-s8B3a71BB3 .container-fluid {
+  padding-left: 50px !important;
+  padding-right: 50px !important;
 }
-.cid-s8AHBhrlg0 .link-wrapper {
-  position: relative;
-  margin: auto;
-  width: 80px;
-  height: 80px;
-}
-.cid-s8AHBhrlg0 .link-wrapper:hover .icon-bg {
-  top: 0px;
-  right: 0px;
-}
-.cid-s8AHBhrlg0 .iconfont-wrapper {
-  box-shadow: 0px 0px 0px 2px #1c1c25 inset;
-  border-radius: 50%;
-  min-width: 80px;
-  width: 80px;
-  align-items: center;
-  display: flex;
-  height: 80px;
-  justify-content: center;
-  transition: all 0.3s;
-  z-index: 2;
-  padding-left: 4px;
-  position: relative;
-}
-.cid-s8AHBhrlg0 .iconfont-wrapper:hover {
-  box-shadow: 0px 0px 0px 2px transparent inset;
-}
-.cid-s8AHBhrlg0 .iconfont-wrapper:hover .icon-bg {
-  top: 0px;
-  right: 0px;
-}
-.cid-s8AHBhrlg0 .iconfont-wrapper:hover .mbr-iconfont {
-  color: white;
-}
-.cid-s8AHBhrlg0 .mbr-iconfont {
-  transition: all 0.3s;
-  font-size: 2rem;
-  color: #1c1c25;
-  position: relative;
-}
-.cid-s8AHBhrlg0 .icon-bg {
-  position: absolute;
-  overflow: visible;
-  top: 7px;
-  right: -7px;
-  box-sizing: border-box;
+.cid-s8B3a71BB3 .badge_wrap {
   width: 100%;
-  transition: all 0.3s;
-  z-index: 1;
-  height: 100%;
+}
+.cid-s8B3a71BB3 .badge_wrap .badge {
+  display: inline-block;
+  border-radius: 10rem;
+  padding: 8px 14px 6px 14px;
+  color: #404040;
+  background-color: rgba(255, 255, 255, 0.85);
+  margin-bottom: 26px;
+}
+.cid-s8B3a71BB3 .badge_wrap .badge.display-4 {
+  font-size: 11px;
+  line-height: 1.81;
+  letter-spacing: 0.5px;
+}
+.cid-s8B3a71BB3 .mbr-section-title {
+  width: 100%;
+}
+.cid-s8B3a71BB3 .mbr-section-title.display-2 {
+  line-height: 1.375;
+}
+.cid-s8B3a71BB3 .mbr-section-subtitle {
+  width: 100%;
+}
+.cid-s8B3a71BB3 .box {
+  min-height: 600px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.cid-s8B3a71BB3 .icon-wrap {
   border-radius: 50%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
 }
-.cid-s8AHBhrlg0 .wrap {
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
+.cid-s8B3a71BB3 .mbr-media span {
+  font-size: 4rem;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  opacity: 0.9;
+  transition: all 0.25s;
+  color: #000000 !important;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.04) !important;
 }
-.cid-s8AHBhrlg0 .modalWindow {
+.cid-s8B3a71BB3 .mbr-media span:hover {
+  opacity: 1;
+  color: #000000 !important;
+  box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5) !important;
+  -webkit-box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.5) !important;
+}
+.cid-s8B3a71BB3 .mbr-media span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-35%);
+  -moz-transform: translateX(-35%);
+  -ms-transform: translateX(-35%);
+  -o-transform: translateX(-35%);
+  transform: translateX(-35%);
+}
+.cid-s8B3a71BB3 .modalWindow {
   position: fixed;
   z-index: 5000;
   left: 0;
@@ -1143,168 +998,250 @@ a {
   width: 100%;
   height: 100%;
 }
-.cid-s8AHBhrlg0 .modalWindow .modalWindow-container {
-  transform: translateY(50vh) translateY(-22vw);
+.cid-s8B3a71BB3 .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
 }
-.cid-s8AHBhrlg0 .modalWindow .modalWindow-video {
-  height: 44.9943757vw;
+.cid-s8B3a71BB3 .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
   width: 80vw;
   margin: 0 auto;
 }
-.cid-s8AHBhrlg0 a.close {
+.cid-s8B3a71BB3 a.close {
   position: absolute;
   right: 4vw;
   top: 4vh;
   color: #ffffff;
   z-index: 5000000;
-  font-size: 16px;
+  font-size: 37px;
   background: #000;
   padding: 20px;
   border-radius: 50%;
 }
-.cid-s8AHBhrlg0 a.close:hover {
+.cid-s8B3a71BB3 a.close:hover {
   color: #ffffff;
 }
-.cid-s8AHAyBZRP {
-  padding-top: 75px;
-  padding-bottom: 75px;
-  background-color: #ffffff;
-}
-.cid-s8AHAyBZRP .icon1 {
-  background: #a8aaf1;
-}
-.cid-s8AHAyBZRP .link-text-wrapper {
-  display: flex;
-  align-items: center;
-}
-.cid-s8AHAyBZRP .link-text-wrapper p {
-  padding: 0;
-  margin: 0;
-  padding-left: 1rem;
-}
-.cid-s8AHAyBZRP .link-wrapper {
-  align-items: center;
-  display: flex;
-  position: relative;
-  margin: auto;
-  width: 70px;
-  height: 70px;
-}
-.cid-s8AHAyBZRP .link-wrapper:hover .icon-bg {
-  top: 0px;
-  right: 0px;
-}
-.cid-s8AHAyBZRP .inline-wrapper {
-  display: inline-block;
-}
-.cid-s8AHAyBZRP .align-wrapper {
-  width: 100%;
-}
-.cid-s8AHAyBZRP .iconfont-wrapper {
-  box-shadow: 0px 0px 0px 2px #1c1c25 inset;
-  border-radius: 50%;
-  min-width: 70px;
-  width: 70px;
-  align-items: center;
-  display: flex;
-  height: 70px;
-  justify-content: center;
-  transition: all 0.3s;
-  z-index: 2;
-  padding-left: 4px;
-  position: relative;
-}
-.cid-s8AHAyBZRP .iconfont-wrapper:hover {
-  box-shadow: 0px 0px 0px 2px transparent inset;
-}
-.cid-s8AHAyBZRP .iconfont-wrapper:hover .icon-bg {
-  top: 0px;
-  right: 0px;
-}
-.cid-s8AHAyBZRP .iconfont-wrapper:hover .mbr-iconfont {
-  color: white;
-}
-.cid-s8AHAyBZRP .mbr-iconfont {
-  transition: all 0.3s;
-  font-size: 1.8rem;
-  color: #1c1c25;
-  position: relative;
-}
-.cid-s8AHAyBZRP .icon-bg {
-  position: absolute;
-  overflow: visible;
-  top: 6px;
-  right: -6px;
-  box-sizing: border-box;
-  width: 100%;
-  transition: all 0.3s;
-  z-index: 1;
-  height: 100%;
-  border-radius: 50%;
-}
-.cid-s8AHAyBZRP img {
-  border-radius: 8px;
-}
-@media (min-width: 992px) {
-  .cid-s8AHAyBZRP img {
-    width: 90%;
-    height: 100%;
-    object-fit: cover;
+@media (max-width: 576px) {
+  .cid-s8B3a71BB3 .box {
+    height: 250px;
   }
 }
-.cid-s8AHAyBZRP .wrap {
-  width: 150px;
-  height: 150px;
-  margin: 0 auto;
-}
-.cid-s8AHAyBZRP .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-s8AHAyBZRP .main-sub-title {
-  background: #e7e7fb;
-  border-radius: 8px;
+.cid-s8B3a71BB3 .play {
+  width: 70px;
+  height: 70px;
+  line-height: 3.5rem !important;
+  text-align: center;
+  border-radius: 100%;
+  background: #ffffff;
   display: inline-block;
-  width: fit-content;
-  padding: 0.1rem 1rem;
+  transition: all 200ms ease-in-out;
+  margin: 0 auto;
+  cursor: pointer;
 }
-.cid-s8AHAyBZRP .card-text {
-  color: #767676;
+.cid-s8B3a71BB3 .play:before {
+  font-family: FontAwesome !important;
+  content: "\f04b";
+  font-size: 1.4rem;
+  padding: 7px 0 0 2px;
+  display: block;
 }
-.cid-s8AHAyBZRP .main-sub-title,
-.cid-s8AHAyBZRP .align-wrapper {
+.cid-s8B3eKnlIK {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-s8B3eKnlIK .badge {
+  display: inline-block;
+  border-radius: 10rem;
+  padding: 8px 14px 6px 14px;
   color: #33358c;
+  background-color: rgba(132, 138, 189, 0.15);
+  margin-bottom: 26px;
 }
-.cid-s8AHAyBZRP .main-text {
-  color: #777d74;
+.cid-s8B3eKnlIK .badge.display-4 {
+  font-size: 11px;
+  line-height: 1.81;
+  letter-spacing: 0.5px;
 }
-.cid-s8AHAyBZRP .modalWindow {
-  position: fixed;
-  z-index: 5000;
-  left: 0;
+.cid-s8B3eKnlIK .minibadge {
+  display: inline-block;
+  border-radius: 10rem;
+  padding: 7px 14px;
+  color: #ffffff;
+  background-color: #848abd;
+  text-align: center;
+  margin-bottom: 26px;
+  font-weight: 600;
+}
+.cid-s8B3eKnlIK .minibadge.display-4 {
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.5px;
+}
+.cid-s8B3eKnlIK .meta {
+  color: #999999;
+  text-align: left;
+  margin-top: 20px;
+}
+.cid-s8B3eKnlIK .meta .date .clock {
+  margin-right: 4px;
+}
+.cid-s8B3eKnlIK .meta .comments .comment {
+  margin-right: 4px;
+}
+.cid-s8B3eKnlIK .meta .comments:before {
+  content: "";
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  margin: 0 0.6rem 0 0.6rem;
+  vertical-align: 3px;
+  background: rgba(48, 48, 48, 0.35);
+}
+.cid-s8B3eKnlIK .meta.display-4 {
+  font-size: 13px;
+}
+.cid-s8B3eKnlIK .mbr-section-subtitle {
+  color: #999999;
+  font-weight: 600;
+  margin-bottom: 21px;
+}
+.cid-s8B3eKnlIK .main-text {
+  color: #606060;
+}
+.cid-s8B3eKnlIK .carousel {
+  margin-top: 56px;
+}
+.cid-s8B3eKnlIK .wrapper {
+  position: relative;
+  padding: 2rem;
+  border-radius: 4px;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: flex-end;
+  align-items: flex-end;
+  height: 18rem;
+  margin-bottom: 30px;
+}
+.cid-s8B3eKnlIK .wrapper .mbr-overlay {
+  background: #1e1e1e;
+  opacity: 0;
+  z-index: 1;
+  transition: all 0.4s ease;
+  border-radius: 4px;
+}
+.cid-s8B3eKnlIK .wrapper img {
+  position: absolute;
   top: 0;
-  background-color: rgba(61, 61, 61, 0.65);
+  left: 0;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  border-radius: 4px;
 }
-.cid-s8AHAyBZRP .modalWindow .modalWindow-container {
-  transform: translateY(50vh) translateY(-22vw);
-}
-.cid-s8AHAyBZRP .modalWindow .modalWindow-video {
-  height: 44.9943757vw;
-  width: 80vw;
-  margin: 0 auto;
-}
-.cid-s8AHAyBZRP a.close {
+.cid-s8B3eKnlIK .wrapper .content-block {
   position: absolute;
-  right: 4vw;
-  top: 4vh;
-  color: #ffffff;
-  z-index: 5000000;
-  font-size: 16px;
-  background: #000;
-  padding: 20px;
-  border-radius: 50%;
+  width: 100%;
+  z-index: 1;
+  top: 50%;
+  left: 0;
+  transform: translateY(-80%);
+  opacity: 0;
+  padding: 0.75rem 1rem;
+  transition: all 0.4s ease;
 }
-.cid-s8AHAyBZRP a.close:hover {
-  color: #ffffff;
+.cid-s8B3eKnlIK .wrapper:hover .mbr-overlay {
+  background: #1e1e1e;
+  opacity: 0.6;
+  z-index: 1;
+}
+.cid-s8B3eKnlIK .wrapper:hover .content-block {
+  opacity: 1;
+  transform: translateY(-50%);
+}
+.cid-s8B3eKnlIK .carousel-item {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-s8B3eKnlIK .carousel-item.active,
+.cid-s8B3eKnlIK .carousel-item-next,
+.cid-s8B3eKnlIK .carousel-item-prev {
+  display: flex;
+}
+.cid-s8B3eKnlIK .carousel-indicators {
+  margin: 20px auto 0;
+  align-items: center;
+  bottom: -40px;
+}
+.cid-s8B3eKnlIK .carousel-indicators .active {
+  transform: scale(1);
+  border: 0;
+  background-color: rgba(153, 153, 153, 0.8);
+  transition: all 200ms ease-in-out;
+}
+.cid-s8B3eKnlIK .carousel-indicators li {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  transition: opacity 0.5s;
+  background-color: rgba(153, 153, 153, 0.8);
+  font-size: 2rem;
+  border-width: 0px;
+  transform: scale(0.6);
+}
+.cid-s8B3eKnlIK .carousel-indicators li:hover {
+  opacity: 1;
+}
+.cid-s8B3eKnlIK .carousel-controls {
+  display: none;
+}
+@media (max-width: 991px) {
+  .cid-s8B3eKnlIK .carousel-controls {
+    display: block;
+  }
+  .cid-s8B3eKnlIK .carousel-controls a {
+    transition: opacity 0.5s;
+    font-size: 2rem;
+  }
+  .cid-s8B3eKnlIK .carousel-controls a span {
+    padding: 10px;
+    border-radius: 50%;
+    color: #ffffff;
+    background: #444444;
+    opacity: 0.9;
+  }
+  .cid-s8B3eKnlIK .carousel-controls a:hover span {
+    opacity: 1;
+  }
+  .cid-s8B3eKnlIK .carousel-indicators {
+    display: none;
+  }
+}
+@media (max-width: 540px) {
+  .cid-s8B3eKnlIK .text-element {
+    padding: 1rem;
+  }
+  .cid-s8B3eKnlIK .carousel-controls {
+    display: none;
+  }
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-s8B3eKnlIK .image-element {
+    min-width: 50%;
+  }
+  .cid-s8B3eKnlIK .media-container-row {
+    width: 100%;
+  }
+}
+.cid-s8B3eKnlIK .carousel-control-prev {
+  left: -70px;
+}
+.cid-s8B3eKnlIK .carousel-control-next {
+  right: -40px;
+}
+.cid-s8B3eKnlIK .caption {
+  text-align: center;
 }
